--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.html
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.html
@@ -3,13 +3,43 @@
     <mat-toolbar color="primary">    
             <mat-toolbar-row color="primary" class="example-toolbar">
                 <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-                <span>LogFileAnalysis</span>
+                <span>Log Аналітік</span>
                 <span class="example-spacer"></span>
                 <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
                 <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
             </mat-toolbar-row>
     </mat-toolbar>
   
-    <app-sidenav></app-sidenav>
+    <mat-sidenav-container class="example-sidenav-container" >
 
-  </div>
+        <mat-sidenav #snav [mode]="'over'" [fixedInViewport]="false">
+            <mat-nav-list>
+                <a mat-list-item routerLink=".">Nav link</a>
+            </mat-nav-list>
+        </mat-sidenav>
+
+        <mat-sidenav-content>
+            <p>hello content</p>
+        </mat-sidenav-content>
+
+    </mat-sidenav-container>
+
+<footer>
+    <mat-toolbar class="footerToolbar">
+
+      <ul class="infoGroup">
+        <li (click)="showInfo()">
+          <button mat-button color="primary">Повідомлення</button> 
+        </li>
+      </ul>
+
+      <div flex class="flexBox">
+        <span>
+          0.1 v.
+        </span>
+      </div>
+    </mat-toolbar>
+
+  </footer>
+
+</div>
