--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.scss
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.scss
@@ -1,7 +1,69 @@
+.example-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.example-is-mobile .example-toolbar {
+  position: fixed;
+  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+  z-index: 2;
+}
+
+h1.example-app-name {
+  margin-left: 8px;
+}
+
+.example-sidenav-container {
+  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+  flex: 1;
+}
+
+.example-is-mobile .example-sidenav-container {
+  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+     `<body>` to be our scrolling element for mobile layouts. */
+  flex: 1 0 auto;
+}
+
+
 .example-icon {
     padding: 0 14px;
   }
   
 .example-spacer {
     flex: 1 1 auto;
+}
+
+.flexBox {
+  width: 100%;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.footerToolbar {
+  height: 24px;
+  padding: 0px;
+  font-size: 13px;
+}
+
+ul.infoGroup {
+  margin: 0; /* Обнуляем значение отступов */
+  padding: 4px; /* Значение полей */
+}
+
+ul.infoGroup li {
+  display: inline; /* Отображать как строчный элемент */
+  margin-right: 5px; /* Отступ слева */
+  border-bottom: 2px solid gray; /* Рамка вокруг текста */
+  padding: 3px; /* Поля вокруг текста */
+}
+
+ul.infoGroup li:hover {
+  cursor:pointer;
+  border-bottom: 2px solid #fff; /* Рамка вокруг текста */
 }
