--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/home/home.component.html
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            dd
+        </div>
+        <div class="col-md-6">
+                dd
+        </div>
+    </div>
+</div>
