--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/home/home.component.html
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/home/home.component.html
@@ -1,10 +1,12 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            dd
+<div class="container h-100 d-flex justify-content-center">
+
+    <div class="row text-center">
+
+        <div class="col-md-4 my-auto" *ngFor="let card of homeCards">
+            <app-card-home [cardHome]="card"></app-card-home>
         </div>
-        <div class="col-md-6">
-                dd
-        </div>
-    </div>
+
+    </div>  
+
 </div>
+    
