--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.scss
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/app/layout/layout.component.scss
@@ -43,8 +43,6 @@ h1.example-app-name {
   display: flex;
 }
 
-.contentSize {
-  width: 100%; 
-  height: auto;
+.rowMenu {
+  border-bottom: 1px solid lightgrey;
 }
-
