--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/styles.scss
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/styles.scss
@@ -6,3 +6,8 @@ body {
     overflow: hidden; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
+
+.mat-toolbar-row, .mat-toolbar-multiple-rows {
+    height: 30px !important;
+    min-height: 30px !important;
+}
