--- a/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/styles.scss
+++ b/LogFileAnalysisApplication/LogFileAnalysisApplication/ClientApp/src/styles.scss
@@ -11,3 +11,9 @@ body {
     height: 30px !important;
     min-height: 30px !important;
 }
+
+/*card*/
+.mat-card-header-text{
+    width:inherit;
+    margin: 0!important;
+}
