--- a/ClientApp/src/app/layout/layout.component.html
+++ b/ClientApp/src/app/layout/layout.component.html
@@ -33,7 +33,7 @@
         </mat-sidenav>
 
         <mat-sidenav-content class="contentFlaxe">
-            <div class="container-fluid">
+            <div class="container-fluid homeBackground">
                 <router-outlet></router-outlet>
             </div>            
         </mat-sidenav-content>
