created mongodb repository; unit of work;

--- a/ClientApp/src/app/layout/layout.component.html
+++ b/ClientApp/src/app/layout/layout.component.html
@@ -32,8 +32,8 @@
             </mat-nav-list>            
         </mat-sidenav>
 
-        <mat-sidenav-content class="contentFlaxe">
-            <div class="container-fluid homeBackground">
+        <mat-sidenav-content class="contentFlaxe homeBackground">
+            <div class="container-fluid">
                 <router-outlet></router-outlet>
             </div>            
         </mat-sidenav-content>
