--- a/ClientApp/src/app/layout/layout.component.html
+++ b/ClientApp/src/app/layout/layout.component.html
@@ -17,7 +17,7 @@
                     Головна. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
-                <a mat-list-item routerLink="/process-log-files" class="rowMenu">
+                <a mat-list-item (click)="onProcessLogFile()" class="rowMenu">
                     Обробка Log-файлів. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
