--- a/ClientApp/src/app/_shareds/log-query-builder/components/log-query-builder/log-query-builder.component.html
+++ b/ClientApp/src/app/_shareds/log-query-builder/components/log-query-builder/log-query-builder.component.html
@@ -1,4 +1,114 @@
-<query-builder [(ngModel)]='query' [config]='config' [allowCollapse]='true'>
+<query-builder [(ngModel)]='query' [config]='config' [allowRuleset]='allowRuleset' [allowCollapse]='allowCollapse'>
+  
+  <ng-container *queryButtonGroup="let ruleset; let addRule=addRule; let addRuleSet=addRuleSet; let removeRuleSet=removeRuleSet">
+    <button type="button" mat-icon-button color="primary" (click)="addRule()">
+      <mat-icon>add</mat-icon></button>
+    <button type="button" mat-icon-button color="primary" *ngIf="addRuleSet" (click)="addRuleSet()">
+      <mat-icon>add_circle_outline</mat-icon></button>
+    <button type="button" mat-icon-button color="accent" *ngIf="removeRuleSet" (click)="removeRuleSet()">
+      <mat-icon>remove_circle_outline</mat-icon></button>
+  </ng-container>
+  
+  <ng-container *queryArrowIcon>
+    <mat-icon ngClass="mat-arrow-icon">chevron_right</mat-icon>
+  </ng-container>
+
+  <ng-container *queryRemoveButton="let rule; let removeRule=removeRule">
+    <button type="button" mat-icon-button color="accent" (click)="removeRule(rule)">
+      <mat-icon>remove</mat-icon>
+    </button>
+  </ng-container>
+
+  <ng-container *querySwitchGroup="let ruleset; let onChange=onChange">
+    <mat-radio-group *ngIf="ruleset" [(ngModel)]="ruleset.condition" (ngModelChange)="onChange($event)">
+      <mat-radio-button [style.padding.px]="10" value="and">And</mat-radio-button>
+      <mat-radio-button [style.padding.px]="10" value="or">Or</mat-radio-button>
+    </mat-radio-group>
+  </ng-container>
+
+  <ng-container *queryEntity="let rule; let entities=entities; let onChange=onChange">
+    <mat-form-field>
+      <mat-select [(ngModel)]="rule.entity" (ngModelChange)="onChange($event, rule)">
+        <mat-option *ngFor="let entity of entities" [value]="entity.value">
+        {{entity.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryField="let rule; let fields=fields; let onChange=onChange; let getFields = getFields">
+    <mat-form-field>
+      <mat-select [(ngModel)]="rule.field" (ngModelChange)="onChange($event, rule)">
+        <mat-option *ngFor="let field of getFields(rule.entity)" [value]="field.value">
+          {{ field.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryOperator="let rule; let operators=operators; let onChange=onChange">
+    <mat-form-field [style.width.px]="90">
+      <mat-select [(ngModel)]="rule.operator" (ngModelChange)="onChange(rule)">
+        <mat-option *ngFor="let value of operators" [value]="value">
+          {{ value }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; type: 'boolean'; let onChange=onChange">
+    <mat-checkbox [(ngModel)]="rule.value" (ngModelChange)="onChange()"></mat-checkbox>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; let options=options; type: 'category'; let onChange=onChange">
+    <mat-form-field>
+      <mat-select [(ngModel)]="rule.value" (ngModelChange)="onChange()" [placeholder]="field.name">
+        <mat-option *ngFor="let opt of options" [value]="opt.value">
+          {{ opt.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; type: 'date'; let onChange=onChange">
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="rule.value" (ngModelChange)="onChange()" [placeholder]="field.name">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; let options=options; type: 'multiselect'; let onChange=onChange">
+    <mat-form-field [style.width.px]="300">
+      <mat-select [(ngModel)]="rule.value" multiple (ngModelChange)="onChange()" [placeholder]="field.name">
+        <mat-option *ngFor="let opt of options" [value]="opt.value">
+          {{ opt.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; type: 'number'; let onChange=onChange">
+    <mat-form-field [style.width.px]="50">
+      <input matInput [(ngModel)]="rule.value" type="number" (ngModelChange)="onChange()" [placeholder]="field.name">
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; type: 'string'; let onChange=onChange">
+    <mat-form-field>
+      <input matInput [(ngModel)]="rule.value" (ngModelChange)="onChange()" [placeholder]="field.name">
+    </mat-form-field>
+  </ng-container>
+
+  <ng-container *queryInput="let rule; let field=field; type: 'textarea'; let onChange=onChange">
+    <mat-form-field>
+      <textarea matInput [(ngModel)]="rule.value" (ngModelChange)="onChange()" [placeholder]="field.name">
+      </textarea>
+    </mat-form-field>
+  </ng-container>
+
+</query-builder>
+<!-- <query-builder [(ngModel)]='query' [config]='config'>
 
     <ng-container *queryButtonGroup="let ruleset; let addRule=addRule; let addRuleSet=addRuleSet; let removeRuleSet=removeRuleSet">
         <button mat-icon-button color="primary" (click)="addRule()">
@@ -49,13 +159,11 @@
         </mat-form-field>
     </ng-container>
 
-    <!-- Override input component for 'boolean' type -->
-    <!-- <ng-container *queryInput="let rule; type: 'boolean'">
+    <ng-container *queryInput="let rule; type: 'boolean'">
         <mat-checkbox [(ngModel)]="rule.value"></mat-checkbox>
-    </ng-container> -->
+    </ng-container>
 
-    <!-- Override input component for 'category' type -->
-    <!-- <ng-container *queryInput="let rule; let field=field; let options=options; type: 'category'">
+    <ng-container *queryInput="let rule; let field=field; let options=options; type: 'category'">
         <mat-form-field>
             <mat-select [(ngModel)]="rule.value" [placeholder]="field.name">
                 <mat-option *ngFor="let opt of options" [value]="opt.value">
@@ -63,20 +171,18 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-    </ng-container> -->
+    </ng-container>
 
-    <!-- Override input component for 'date' type -->
-    <!-- <ng-container *queryInput="let rule; type: 'date'">
+    <ng-container *queryInput="let rule; type: 'date'">
         <mat-form-field>
           <input matInput [matDatepicker]="picker" [(ngModel)]="rule.value"
                  placeholder="Choose a date">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>           
-     </ng-container> -->
+     </ng-container>
 
-    <!-- Override input component for 'multiselect' type -->
-    <!-- <ng-container *queryInput="let rule; let options=options; type: 'multiselect'">
+    <ng-container *queryInput="let rule; let options=options; type: 'multiselect'">
         <mat-form-field [style.width.px]="300">
           <mat-select  [(ngModel)]="rule.value" multiple>
             <mat-option *ngFor="let opt of options" [value]="opt.value">
@@ -84,23 +190,20 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-    </ng-container> -->
+    </ng-container>
 
-    <!-- Override input component for 'number' type -->
-    <!-- <ng-container *queryInput="let rule; let field=field; type: 'number'">
+    <ng-container *queryInput="let rule; let field=field; type: 'number'">
         <mat-form-field [style.width.px]="50">
           <input matInput [(ngModel)]="rule.value" [placeholder]="field.name" type="number">
         </mat-form-field>
-    </ng-container> -->
+    </ng-container>
 
-    <!-- Override input component for 'string' type -->
     <ng-container *queryInput="let rule; let field=field; type: 'string'">
         <mat-form-field *ngIf="!rule.disabled">
           <input matInput [(ngModel)]="rule.value" [placeholder]="field.name">
         </mat-form-field>
     </ng-container>
 
-    <!-- Override input component for 'textarea' type -->
     <ng-container *queryInput="let rule; let field=field; type: 'textarea'">
         <mat-form-field>
           <textarea matInput [(ngModel)]="rule.value" [placeholder]="field.name">
@@ -108,4 +211,4 @@
         </mat-form-field>
     </ng-container>
 
-</query-builder>
+</query-builder> -->
