--- a/ClientApp/src/app/_shareds/log-table/components/log-table.component.html
+++ b/ClientApp/src/app/_shareds/log-table/components/log-table.component.html
@@ -12,10 +12,11 @@
         <td mat-cell *matCellDef="let element" [attr.colspan]="displayColumn.length">
         <div class="example-element-detail"
             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-            <treetable style="width: 100%;"
+            treedata
+            <!-- <treetable style="width: 100%;"
                 [tree]="getExpandTreeData(element)"
                 [options]="treeOptions">
-            </treetable>        
+            </treetable>         -->
         </div>
         </td>
     </ng-container>
