unknown error; status

--- a/ClientApp/src/app/_shareds/error-table/components/error-table/error-table.component.html
+++ b/ClientApp/src/app/_shareds/error-table/components/error-table/error-table.component.html
@@ -11,9 +11,7 @@
         <td mat-cell *matCellDef="let element" [attr.colspan]="logTableOptions.displayTableColumns.length">
         <div class="example-element-detail"
             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">             
-            <app-tree-table style="width: 100%;"
-                [treeDataSource]="getExpandTreeData(element)">
-            </app-tree-table>        
+            <app-error-settings class="error-settings"></app-error-settings>     
         </div>
         </td>
     </ng-container>
