--- a/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/error-status-form/error-status-form.component.scss
+++ b/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/error-status-form/error-status-form.component.scss
@@ -9,4 +9,18 @@ mat-card {
         width: 100%;
     }
 
+    mat-card-header {
+        width: 100%;
+
+        .mat-icon-button {
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+
+            mat-icon {
+                font-size: 21px;
+            }
+        }
+    }
+
 }
