--- a/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/status-dialog.component.html
+++ b/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/status-dialog.component.html
@@ -1,15 +1,10 @@
 <div class="dialog-header">
   <h1 mat-dialog-title>Задати статус</h1>
-  <button mat-icon-button aria-label="add new error status" 
-    matTooltip="{{getTooltipButton}}"
+  <button mat-icon-button  *ngIf="!showAddNewStatus"
+    aria-label="add new error status" 
+    matTooltip="Додати новий"
     (click)="onShowAddForm()">
-    <mat-icon>{{getButtonIcon}}</mat-icon>
-  </button>
-  <button mat-icon-button *ngIf="showAddNewStatus"
-    aria-label="save new error status" 
-    matTooltip="Зберегти"
-    (click)="onSaveNewStatus()">
-    <mat-icon>save</mat-icon>
+    <mat-icon>add</mat-icon>
   </button>
 </div>
 <mat-dialog-content class="mat-typography">
@@ -18,15 +13,15 @@
       <div class="status-tree">
         <app-error-statuses-tree *ngIf="errorStstusesData"
           [dataSource]="errorStstusesData"
-          (selectedStatusItem)="onTreeSelctedItem($event)">
+          (selectedStatusItem)="onTreeSelectedItem($event)">
         </app-error-statuses-tree>
       </div>
     </div>
     <div class="col-md-6" *ngIf="showAddNewStatus && newErrorStatusesModel">
       <div class="status-form">
         <app-error-status-form
-          [errorStatusesModel]="newErrorStatusesModel">
-          
+          [model]="newErrorStatusesModel"
+          (addNewModel)="onSaveNewStatus($event)">          
         </app-error-status-form>
       </div>
     </div>
