--- a/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/error-statuses-tree/error-statuses-tree.component.html
+++ b/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/error-statuses-tree/error-statuses-tree.component.html
@@ -4,7 +4,7 @@
             <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
                 <li class="mat-tree-node" (click)="nodeItemClick(node.value)" [class.node-item-selected]="node.value.selected">
                     <button mat-icon-button disabled></button>
-                    {{node.value.statusCode}} - {{node.value.statusTitle}}-123
+                    {{node.value.code}} - {{node.value.title}}
                 </li>
             </mat-tree-node>
             <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -16,7 +16,7 @@
                                 {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                             </mat-icon>
                         </button>
-                        {{node.value.statusCode}} - {{node.value.statusTitle}}
+                        {{node.value.code}} - {{node.value.title}}
                     </div>
                     <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
                         <ng-container matTreeNodeOutlet></ng-container>
