--- a/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/selected-status/selected-status.component.html
+++ b/ClientApp/src/app/_shareds/error-table/components/error-settings/status-dialog/selected-status/selected-status.component.html
@@ -1,1 +1,10 @@
-<p>selected-status works!</p>
+<mat-card class="example-card">
+    <mat-card-header class="card-form-header">
+        <mat-card-title>Обраний статус</mat-card-title>        
+    </mat-card-header>
+    <mat-card-content>
+        <div class="example-container">
+            seletedItem
+        </div>
+    </mat-card-content>
+  </mat-card>
