--- a/ClientApp/src/app/layout/layout.component.html
+++ b/ClientApp/src/app/layout/layout.component.html
@@ -13,19 +13,19 @@
 
         <mat-sidenav #snav [mode]="'over'" [fixedInViewport]="false">
             <mat-nav-list>
-                <a mat-list-item routerLink="/" class="rowMenu">
+                <a mat-list-item routerLink="/" class="rowMenu" (click)="closeSnav()">
                     Головна. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
-                <a mat-list-item (click)="onProcessLogFile()" class="rowMenu">
+                <a mat-list-item (click)="onProcessLogFile()" class="rowMenu" (click)="closeSnav()">
                     Обробка Log-файлів. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
-                <a mat-list-item routerLink="/show-log-objects" class="rowMenu">
+                <a mat-list-item routerLink="/show-log-objects" class="rowMenu" (click)="closeSnav()">
                     Перегляд Log-об'єктів. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
-                <a mat-list-item routerLink="/analysis-errors" class="rowMenu">
+                <a mat-list-item routerLink="/analysis-errors" class="rowMenu" (click)="closeSnav()">
                     Аналіз помилок. <span class="fill-space"></span>
                     <!-- <img alt="search" src="./assets/images/searchIconGray.svg" style="padding-right: 5px"> Пошук <span class="fill-space"></span> -->
                 </a>
